// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Picker.Range icon 1`] = `
<div>
  <div
    class="rc-picker rc-picker-range"
  >
    <div
      class="rc-picker-input rc-picker-input-active"
    >
      <input
        autocomplete="off"
        placeholder=""
        readonly=""
        size="12"
        value="1990-09-03"
      />
    </div>
    <div
      class="rc-picker-range-separator"
    >
      ~
    </div>
    <div
      class="rc-picker-input"
    >
      <input
        autocomplete="off"
        placeholder=""
        readonly=""
        size="12"
        value="1990-09-03"
      />
    </div>
    <div
      class="rc-picker-active-bar"
      style="left: 0px; width: 0px; position: absolute;"
    />
    <span
      class="rc-picker-suffix"
    >
      <span
        class="suffix-icon"
      />
    </span>
    <span
      class="rc-picker-clear"
    >
      <span
        class="suffix-icon"
      />
    </span>
  </div>
</div>
`;

exports[`Picker.Range onPanelChange is array args should render correctly in rtl 1`] = `
<div>
  <div
    class="rc-picker rc-picker-range rc-picker-rtl"
  >
    <div
      class="rc-picker-input rc-picker-input-active"
    >
      <input
        autocomplete="off"
        placeholder=""
        readonly=""
        size="12"
        value=""
      />
    </div>
    <div
      class="rc-picker-range-separator"
    >
      ~
    </div>
    <div
      class="rc-picker-input"
    >
      <input
        autocomplete="off"
        placeholder=""
        readonly=""
        size="12"
        value=""
      />
    </div>
    <div
      class="rc-picker-active-bar"
      style="right: 0px; width: 0px; position: absolute;"
    />
  </div>
</div>
`;

exports[`Picker.Range panelRender 1`] = `
<body>
  <div>
    <div
      class="rc-picker rc-picker-range"
    >
      <div
        class="rc-picker-input rc-picker-input-active"
      >
        <input
          autocomplete="off"
          placeholder=""
          readonly=""
          size="12"
          value=""
        />
      </div>
      <div
        class="rc-picker-range-separator"
      >
        ~
      </div>
      <div
        class="rc-picker-input"
      >
        <input
          autocomplete="off"
          placeholder=""
          readonly=""
          size="12"
          value=""
        />
      </div>
      <div
        class="rc-picker-active-bar"
        style="left: 0px; width: 0px; position: absolute;"
      />
    </div>
  </div>
  <div>
    <div
      class="rc-picker-dropdown rc-picker-dropdown-range rc-picker-dropdown-placement-bottomLeft"
      style="left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="rc-picker-range-wrapper rc-picker-date-range-wrapper"
        style="min-width: 0;"
      >
        <div
          class="rc-picker-range-arrow"
          style="left: 0px;"
        />
        <div
          class="rc-picker-panel-container"
          style="margin-left: 0px;"
        >
          <h1>
            Light
          </h1>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Picker.Range use dateRender and monthCellRender in range picker 1`] = `
<body>
  <div>
    <div
      class="rc-picker rc-picker-range rc-picker-focused"
    >
      <div
        class="rc-picker-input rc-picker-input-active"
      >
        <input
          autocomplete="off"
          placeholder=""
          size="12"
          value=""
        />
      </div>
      <div
        class="rc-picker-range-separator"
      >
        ~
      </div>
      <div
        class="rc-picker-input"
      >
        <input
          autocomplete="off"
          placeholder=""
          readonly=""
          size="12"
          value=""
        />
      </div>
      <div
        class="rc-picker-active-bar"
        style="left: 0px; width: 0px; position: absolute;"
      />
    </div>
  </div>
  <div>
    <div
      class="rc-picker-dropdown rc-picker-dropdown-range rc-picker-dropdown-placement-bottomLeft"
      style="left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="rc-picker-range-wrapper rc-picker-date-range-wrapper"
        style="min-width: 0;"
      >
        <div
          class="rc-picker-range-arrow"
          style="left: 0px;"
        />
        <div
          class="rc-picker-panel-container"
          style="margin-left: 0px;"
        >
          <div
            class="rc-picker-panel-layout"
          >
            <div>
              <div
                class="rc-picker-panels"
              >
                <div
                  class="rc-picker-panel"
                  tabindex="-1"
                >
                  <div
                    class="rc-picker-date-panel"
                  >
                    <div
                      class="rc-picker-header"
                    >
                      <button
                        class="rc-picker-header-super-prev-btn"
                        tabindex="-1"
                        type="button"
                      >
                        «
                      </button>
                      <button
                        class="rc-picker-header-prev-btn"
                        tabindex="-1"
                        type="button"
                      >
                        ‹
                      </button>
                      <div
                        class="rc-picker-header-view"
                      >
                        <button
                          class="rc-picker-month-btn"
                          tabindex="-1"
                          type="button"
                        >
                          Sep
                        </button>
                        <button
                          class="rc-picker-year-btn"
                          tabindex="-1"
                          type="button"
                        >
                          1990
                        </button>
                      </div>
                      <button
                        class="rc-picker-header-next-btn"
                        style="visibility: hidden;"
                        tabindex="-1"
                        type="button"
                      >
                        ›
                      </button>
                      <button
                        class="rc-picker-header-super-next-btn"
                        style="visibility: hidden;"
                        tabindex="-1"
                        type="button"
                      >
                        »
                      </button>
                    </div>
                    <div
                      class="rc-picker-body"
                    >
                      <table
                        class="rc-picker-content"
                      >
                        <thead>
                          <tr>
                            <th>
                              Su
                            </th>
                            <th>
                              Mo
                            </th>
                            <th>
                              Tu
                            </th>
                            <th>
                              We
                            </th>
                            <th>
                              Th
                            </th>
                            <th>
                              Fr
                            </th>
                            <th>
                              Sa
                            </th>
                          </tr>
                        </thead>
                        <tbody>
                          <tr>
                            <td
                              class="rc-picker-cell"
                              title="1990-08-26"
                            >
                              <div>
                                26
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell"
                              title="1990-08-27"
                            >
                              <div>
                                27
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell"
                              title="1990-08-28"
                            >
                              <div>
                                28
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell"
                              title="1990-08-29"
                            >
                              <div>
                                29
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell"
                              title="1990-08-30"
                            >
                              <div>
                                30
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-end"
                              title="1990-08-31"
                            >
                              <div>
                                31
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-start rc-picker-cell-in-view"
                              title="1990-09-01"
                            >
                              <div>
                                1
                              </div>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-09-02"
                            >
                              <div>
                                2
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view rc-picker-cell-today"
                              title="1990-09-03"
                            >
                              <div>
                                3
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-09-04"
                            >
                              <div>
                                4
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-09-05"
                            >
                              <div>
                                5
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-09-06"
                            >
                              <div>
                                6
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-09-07"
                            >
                              <div>
                                7
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-09-08"
                            >
                              <div>
                                8
                              </div>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-09-09"
                            >
                              <div>
                                9
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-09-10"
                            >
                              <div>
                                10
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-09-11"
                            >
                              <div>
                                11
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-09-12"
                            >
                              <div>
                                12
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-09-13"
                            >
                              <div>
                                13
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-09-14"
                            >
                              <div>
                                14
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-09-15"
                            >
                              <div>
                                15
                              </div>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-09-16"
                            >
                              <div>
                                16
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-09-17"
                            >
                              <div>
                                17
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-09-18"
                            >
                              <div>
                                18
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-09-19"
                            >
                              <div>
                                19
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-09-20"
                            >
                              <div>
                                20
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-09-21"
                            >
                              <div>
                                21
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-09-22"
                            >
                              <div>
                                22
                              </div>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-09-23"
                            >
                              <div>
                                23
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-09-24"
                            >
                              <div>
                                24
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-09-25"
                            >
                              <div>
                                25
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-09-26"
                            >
                              <div>
                                26
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-09-27"
                            >
                              <div>
                                27
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-09-28"
                            >
                              <div>
                                28
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-09-29"
                            >
                              <div>
                                29
                              </div>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rc-picker-cell rc-picker-cell-end rc-picker-cell-in-view"
                              title="1990-09-30"
                            >
                              <div>
                                30
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-start"
                              title="1990-10-01"
                            >
                              <div>
                                1
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell"
                              title="1990-10-02"
                            >
                              <div>
                                2
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell"
                              title="1990-10-03"
                            >
                              <div>
                                3
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell"
                              title="1990-10-04"
                            >
                              <div>
                                4
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell"
                              title="1990-10-05"
                            >
                              <div>
                                5
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell"
                              title="1990-10-06"
                            >
                              <div>
                                6
                              </div>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
                <div
                  class="rc-picker-panel"
                  tabindex="-1"
                >
                  <div
                    class="rc-picker-date-panel"
                  >
                    <div
                      class="rc-picker-header"
                    >
                      <button
                        class="rc-picker-header-super-prev-btn"
                        style="visibility: hidden;"
                        tabindex="-1"
                        type="button"
                      >
                        «
                      </button>
                      <button
                        class="rc-picker-header-prev-btn"
                        style="visibility: hidden;"
                        tabindex="-1"
                        type="button"
                      >
                        ‹
                      </button>
                      <div
                        class="rc-picker-header-view"
                      >
                        <button
                          class="rc-picker-month-btn"
                          tabindex="-1"
                          type="button"
                        >
                          Oct
                        </button>
                        <button
                          class="rc-picker-year-btn"
                          tabindex="-1"
                          type="button"
                        >
                          1990
                        </button>
                      </div>
                      <button
                        class="rc-picker-header-next-btn"
                        tabindex="-1"
                        type="button"
                      >
                        ›
                      </button>
                      <button
                        class="rc-picker-header-super-next-btn"
                        tabindex="-1"
                        type="button"
                      >
                        »
                      </button>
                    </div>
                    <div
                      class="rc-picker-body"
                    >
                      <table
                        class="rc-picker-content"
                      >
                        <thead>
                          <tr>
                            <th>
                              Su
                            </th>
                            <th>
                              Mo
                            </th>
                            <th>
                              Tu
                            </th>
                            <th>
                              We
                            </th>
                            <th>
                              Th
                            </th>
                            <th>
                              Fr
                            </th>
                            <th>
                              Sa
                            </th>
                          </tr>
                        </thead>
                        <tbody>
                          <tr>
                            <td
                              class="rc-picker-cell rc-picker-cell-end"
                              title="1990-09-30"
                            >
                              <div>
                                30
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-start rc-picker-cell-in-view"
                              title="1990-10-01"
                            >
                              <div>
                                1
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-10-02"
                            >
                              <div>
                                2
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-10-03"
                            >
                              <div>
                                3
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-10-04"
                            >
                              <div>
                                4
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-10-05"
                            >
                              <div>
                                5
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-10-06"
                            >
                              <div>
                                6
                              </div>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-10-07"
                            >
                              <div>
                                7
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-10-08"
                            >
                              <div>
                                8
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-10-09"
                            >
                              <div>
                                9
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-10-10"
                            >
                              <div>
                                10
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-10-11"
                            >
                              <div>
                                11
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-10-12"
                            >
                              <div>
                                12
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-10-13"
                            >
                              <div>
                                13
                              </div>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-10-14"
                            >
                              <div>
                                14
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-10-15"
                            >
                              <div>
                                15
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-10-16"
                            >
                              <div>
                                16
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-10-17"
                            >
                              <div>
                                17
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-10-18"
                            >
                              <div>
                                18
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-10-19"
                            >
                              <div>
                                19
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-10-20"
                            >
                              <div>
                                20
                              </div>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-10-21"
                            >
                              <div>
                                21
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-10-22"
                            >
                              <div>
                                22
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-10-23"
                            >
                              <div>
                                23
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-10-24"
                            >
                              <div>
                                24
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-10-25"
                            >
                              <div>
                                25
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-10-26"
                            >
                              <div>
                                26
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-10-27"
                            >
                              <div>
                                27
                              </div>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-10-28"
                            >
                              <div>
                                28
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-10-29"
                            >
                              <div>
                                29
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-in-view"
                              title="1990-10-30"
                            >
                              <div>
                                30
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-end rc-picker-cell-in-view"
                              title="1990-10-31"
                            >
                              <div>
                                31
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell rc-picker-cell-start"
                              title="1990-11-01"
                            >
                              <div>
                                1
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell"
                              title="1990-11-02"
                            >
                              <div>
                                2
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell"
                              title="1990-11-03"
                            >
                              <div>
                                3
                              </div>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="rc-picker-cell"
                              title="1990-11-04"
                            >
                              <div>
                                4
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell"
                              title="1990-11-05"
                            >
                              <div>
                                5
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell"
                              title="1990-11-06"
                            >
                              <div>
                                6
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell"
                              title="1990-11-07"
                            >
                              <div>
                                7
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell"
                              title="1990-11-08"
                            >
                              <div>
                                8
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell"
                              title="1990-11-09"
                            >
                              <div>
                                9
                              </div>
                            </td>
                            <td
                              class="rc-picker-cell"
                              title="1990-11-10"
                            >
                              <div>
                                10
                              </div>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
